--- a/css/custom.css
+++ b/css/custom.css
@@ -156,6 +156,9 @@ body.modal-open {
 .navbar-container .main-nav .menu-item-btn {
     color: var(--text-primary);
 }
+.navbar-container .main-nav .menu-item-btn.w--current {
+    color: var(--text-inverse);
+}
 .navbar-container.scrolled .main-nav .menu-item-btn {
     color: var(--text-primary);
 }
@@ -163,8 +166,9 @@ body.modal-open {
 .navbar-container.scrolled .main-nav .menu-item-btn:hover {
     background-color: var(--tk-yellow-accent);
 }
-.menu-item-btn.w--current{
-    color:var(--text-inverse);
+body[data-theme="dark"] .navbar-container .main-nav .menu-item-btn:hover {
+    color: var(--text-inverse);
+    background-color: var(--tk-yellow-accent);
 }
 .navbar-container .main-nav {
     background-color: var(--bg-primary);
